增加题解：面试题 16.01. 交换数字

--- a/leetcode-c-language/解题技巧.md
+++ b/leetcode-c-language/解题技巧.md
@@ -6,6 +6,18 @@
 
 ## 位运算
 
+### 异或运算
+
+- 变量与自身异或结果为0
+- 变量与0异或结果为自身
+- 异或满足结合律
+
 - 异或自身奇数次等于自身
+
+注：用于变量交换等
+
+
+
 - A & （A-1）去掉最后一位1
 - A & 1 == 0 判断奇偶
+
