增加题解：leetcode-面试题-02.03-删除中间节点

--- a/leetcode-c-language/解题技巧.md
+++ b/leetcode-c-language/解题技巧.md
@@ -1,6 +1,7 @@
 - 首先要想到暴力破解的方法，哈哈，可以减少压力。
 - 数组求最值时，想到滑动窗口
 - 遇到比较小的整数，厉害的“桶排序”不能缺席。
+- 利用哨兵可以简化问题或者运算（比如：在末尾加入目标值，检测到目标值时结束搜索，再判断是否是哨兵即可，可以减少判断是否是末尾）
 
 
 
@@ -8,8 +9,8 @@
 
 ### 异或运算
 
-- 变量与自身异或结果为0
-- 变量与0异或结果为自身
+- 变量与自身异或结果为 0
+- 变量与 0 异或结果为自身
 - 异或满足结合律
 
 - 异或自身奇数次等于自身
