--- a/leetcode-c-language/解题技巧.md
+++ b/leetcode-c-language/解题技巧.md
@@ -1,7 +1,8 @@
 - 首先要想到暴力破解的方法，哈哈，可以减少压力。
 - 数组求最值时，想到滑动窗口
 - 遇到比较小的整数，厉害的“桶排序”不能缺席。
-- 利用哨兵可以简化问题或者运算（比如：在末尾加入目标值，检测到目标值时结束搜索，再判断是否是哨兵即可，可以减少判断是否是末尾）
+- 利用哨兵可以简化问题或者运算（比如：在末尾加入目标值，检测到目标值时结束搜索，再判断是否是哨兵即可，可以减少判断是否是末尾）。
+- 针对一些循环、旋转问题，要记住**循环不变量原则**。
 
 
 
