增加leetcode-707-设计链表 题解

--- a/leetcode-c-language/解题技巧.md
+++ b/leetcode-c-language/解题技巧.md
@@ -1,10 +1,19 @@
+## 通用
+
 - 首先要想到暴力破解的方法，哈哈，可以减少压力。
-- 数组求最值时，想到滑动窗口
+
+## 数组
+
+- 数组求最值时，想到滑动窗口，不断地扩展和缩减窗口，一般是求取最值问题。
 - 遇到比较小的整数，厉害的“桶排序”不能缺席。
 - 利用哨兵可以简化问题或者运算（比如：在末尾加入目标值，检测到目标值时结束搜索，再判断是否是哨兵即可，可以减少判断是否是末尾）。
 - 针对一些循环、旋转问题，要记住**循环不变量原则**。
+- 双指针法在数组和链表中都经常被使用到，能大大减少解题的复杂度。
 
+## 链表
 
+- 有些情况使用虚拟头结点，可以简化问题（可以不用对头结点进行特殊化处理）。
+- 要注意细节，对头结点、尾节点多加注意，还有指向的指针别丢了。
 
 ## 位运算
 
