增加leetcode题解 242题

--- a/leetcode-c-language/解题技巧.md
+++ b/leetcode-c-language/解题技巧.md
@@ -16,6 +16,10 @@
 - 要注意细节，对头结点、尾节点多加注意，还有指向的指针别丢了。
 - 做链表的题目一定要画图，举个例子分析，不然很容易出错。
 
+## Hash table
+
+- 利用字母的ASICC码映射到数组的方式，也是 hash 表的一种应用。
+
 ## 位运算
 
 ### 异或运算
